<resources>
    <string name="app_name">Aula01</string>
    <string name="notaUm">Digite a 1ª nota:</string>
    <string name="notaDois">Digite a 2ª nota:</string>
    <string name="notaTres">Digite a 3ª nota:</string>
    <string name="notaQuatro">Digite a 4ª nota:</string>
    <string name="result">Aguardando Resultado…</string>
    <string name="calculateAverage">Calcular Média</string>
    <string name="welcomeText">Bem-vindo</string>
    <string name="startBtn">Começar</string>
    <string name="invalidValue">Valor Inválido</string>
    <string name="menuText">Menu</string>
    <string name="calculateImc">Calcular IMC</string>
    <string name="alturaHint">Ex: 155</string>
    <string name="pesoHint">Ex: 75</string>
    <string name="alturaText">Altura (cm): </string>
    <string name="pesoText">Peso (kg): </string>
</resources>